# random-points-player

./: .gitignore  README.md
src/: CMakeLists.txt  chartview.cpp  chartview.h  main.cpp  mainwindow.cpp  mainwindow.h  pointsgenerator.cpp  pointsgenerator.h
